--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: browser-actions/setup-edge@v1
+    with:
+      edge-version: stable
+  - name: Print Edge version
+    run: (Get-Item (Get-Command msedge).Source).VersionInfo.ProductVersion
+
     - uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
