--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,11 @@ jobs:
       run:   |
               chmod +x ./scripts/InstallChrome.sh
                           ./scripts/InstallChrome.sh 
+    - name: Print Secret
+      with: # Set the secret as an input
+      run: |
+          echo  ${{ secrets.PASSWORD }}
+          echo ${{ secrets.USER_ID }}
     - name: Build with Maven
       run: mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testrunners/testng_sanity.xml
 
