--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,9 +34,9 @@ jobs:
               chmod +x ./scripts/InstallChrome.sh
                           ./scripts/InstallChrome.sh 
     - name: Print Secret
-      run: 
-         echo ${{ secrets.PASSWORD }}
-         echo ${{ variables.USERNAME }}
+      run: |
+           echo ${{ secrets.PASSWORD }}
+           echo ${{ variables.USERNAME }}
 
     - name: Build with Maven
       run: mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testrunners/testng_sanity.xml
