--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,10 +33,10 @@ jobs:
       run:   |
               chmod +x ./scripts/InstallChrome.sh
                           ./scripts/InstallChrome.sh 
-    - name: Print Secret
-      run: |
-           echo ${{ secrets.PASSWORD }}
-           echo ${{ variables.USERNAME }}
+    - name: Print Variable
+      run: echo ${{ variables.USERNAME }}
+           #echo ${{ secrets.PASSWORD }}
+           
 
     - name: Build with Maven
       run: mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testrunners/testng_sanity.xml
