--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,13 +36,13 @@ jobs:
     
     - name: Print Variable
       env:  
-            USERNAME: ${{ env.USERNAME }}
+            USERNAME: ${{ secrets.USERNAME }}
       run: |
         echo $USERNAME | base64 --decode > cert.der
            
 
     - name: Build with Maven
-      run: mvn clean test -Dusername="augbatch2023@opencart.com" -Dpassword="Selenium@12345" -Dsurefire.suiteXmlFiles=src/test/resources/testrunners/testng_sanity.xml
+      run: mvn clean test -Dusername=${{secrets.USER_ID}} -Dpassword=${{ secrets.PASSWORD }} -Dsurefire.suiteXmlFiles=src/test/resources/testrunners/testng_sanity.xml
 
 
   
