--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,9 +30,10 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name:  Install Google Chrome # Using shell script to install Google Chrome
-      run:   |
-              chmod +x ./scripts/InstallChrome.sh
-                          ./scripts/InstallChrome.sh 
+      run: browser-actions/setup-chrome@latest
+      #run:   |
+              #chmod +x ./scripts/InstallChrome.sh
+               #           ./scripts/InstallChrome.sh 
     
     - name: Print Variable
       env:  
